--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     font-family: 'Bebas Neue', cursive;
+    text-decoration: none;
+    color:white;
 }
 html{
     scroll-behavior: smooth;
@@ -20,14 +22,6 @@ body {
     background-color: rgb(220, 220, 220);
 }
 
-header {
-    position:fixed;
-    width: 100%;
-    height: 60px;
-    background-color: rgb(19, 20, 19);   
-    color: white;
-    z-index: 1;
-}
 .clear {
     clear: both;
 }
@@ -128,7 +122,12 @@ nav.tecno li {
         top: 20px;
     }
 }
-
+@media screen and (max-width:2000px){
+    .arrow{
+        left: 48%;
+        top: 20px;
+    }
+}
 @media screen and (max-width:900px){
     .arrow{
         width: 0;
@@ -178,7 +177,7 @@ nav.tecno li {
 #contato{
     text-align: center;
     width: 100%;
-    height: 70vh;
+    height: 50%;
     background-color: rgb(220, 220, 220);
 }
 
@@ -211,6 +210,7 @@ nav.tecno li {
 }
 .footer p,h4{
     text-align: center;
+    color:#888
 }
 @media screen and (max-width:700px){
     *{
@@ -254,5 +254,88 @@ nav.tecno li {
     }
     .sobre{
         width: 80%;
+    }
+}
+
+.mobile-menu div{
+    display: none;
+    width:32px;
+    height:2px;
+    background-color:#fff;
+    margin:8px;
+}
+.mobile-menu{
+    cursor: pointer;
+}
+
+header nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;    
+    position:fixed;
+    background-color: rgb(19, 20, 19);   
+    z-index: 1;
+    width: 100%;
+    height: 8vh;
+}
+
+.nav-list{
+    list-style: none;
+    display: flex;
+    text-decoration: none;
+   
+}
+
+.nav-list li{
+    letter-spacing: 3px;
+    margin-left: 32px;
+    text-decoration: none;
+    font-size: 15px;
+}
+
+nav a{
+    transition: 0.3s;
+  
+}
+
+.nav a:hover{
+    opacity: 0.7;
+}
+.tlt{
+    font-size: 30px;
+}
+.name{
+    letter-spacing: 2px;
+    font-size: 30px;
+}
+@media (max-width:999px){
+    body{
+        overflow-x: hidden;
+    }
+    .nav-list{
+        position:absolute;
+        top:8vh;
+        right:0;
+        width: 100vw;
+        height: 70vh;
+        background-color: rgb(29,30, 29);
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease-out;
+    }
+    .nav-list li{
+        margin-left: 10px;
+    }
+    .mobile-menu div{
+        display: block;
+    }
+    .mobile-menu{
+        display: block;
+    }
+
+    .nav-list.active{
+        transform: translateX(0%);
     }
 }
